# BIE_Laplace_PDC

./: #setEnv#  .gitignore  CMakeLists.txt  setEnv_sara
BIE_laplace_Beskow/: CMakeLists.txt
BIE_laplace_Beskow/api/: #BIELaplace.h#  BIELaplace.h
BIE_laplace_Beskow/bathscripts/: profil.sh  runpat.sh
BIE_laplace_Beskow/output/batch1/: error_file.e  main_exe+pat+26760-349t.ap2  main_exe+pat+26760-349t.xf  my_output_file  samp.prof  tracing.prof
BIE_laplace_Beskow/src/: #computeSolution.c#  #main.c#  main.c  solveDensity.c
BIE_laplace_Beskow_hybrid/: CMakeLists.txt
BIE_laplace_Beskow_hybrid/api/: BIELaplace.h
BIE_laplace_Beskow_hybrid/batchscripts/: profil.sh  runpat.sh
BIE_laplace_Beskow_hybrid/src/: computeError.c  computeSolution.c  init.c  main.c  solveDensity.c  specialquadlapl.c  timing.c
BIE_laplace_Beskow_mpi/: CMakeLists.txt
BIE_laplace_Beskow_mpi/api/: #BIELaplace.h#  BIELaplace.h  dataDensity.txt
BIE_laplace_Beskow_mpi/batchscripts/: copyscript.sh  profil.sh  runpat.sh
BIE_laplace_Beskow_mpi/output/: stronglist.txt  weaklist.txt
BIE_laplace_Beskow_mpi/src/: computeError.c  computeSolution.c  init.c  main.c  specialquadlapl.c
BIE_laplace_Beskow_omp/: CMakeLists.txt  script_cmake_run  script_make_run  script_run
BIE_laplace_Beskow_omp/api/: BIELaplace.h
BIE_laplace_Beskow_omp/batchscripts/: profile.sh  runpat.sh
gsl-2.2-source/: Makefile  config.h  config.status  gsl-config  gsl-histogram  gsl-randist  gsl.pc  libgsl.la  libtool
gsl/lib/: libgsl.la  (+2 more)
report/: .gitignore  report.aux  report.fdb_latexmk  report.fls  report.tex
(+1024 files in other folders)
